# CATS2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/camera-calibration/: CMakeLists.txt  MainWindow.hpp  MainWindow.ui  icons.qrc
examples/camera-viewer/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  ViewerWindow.cpp  ViewerWindow.hpp  ViewerWindow.ui  icons.qrc  main.cpp
examples/control-map-viewer/: CMakeLists.txt  FrameScene.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  icons.qrc  main.cpp
examples/coordinates-convertor/: CMakeLists.txt  main.cpp
examples/inter-species-data-receiver/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp
examples/inter-species-data-sender/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
examples/path-planning-viewer/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp
examples/pixel-locator/: CMakeLists.txt  FrameScene.cpp  MainWindow.cpp  icons.qrc  main.cpp
examples/simple-robot-controller/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp
examples/simple-settings-interface/: CMakeLists.txt  main.cpp
examples/simple-tracker/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
examples/simple-video-grabber/: CMakeLists.txt  main.cpp
examples/trajectory-convertor/: CMakeLists.txt  main.cpp
source/cats/: CMakeLists.txt  icons.qrc  main.cpp
source/cats/gui/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PreferencesDialog.cpp  PreferencesDialog.hpp  PreferencesDialog.ui
source/cats/settings/: Registry.cpp  Registry.hpp  Settings.cpp  Settings.hpp
source/common/: AgentData.cpp  AgentData.hpp  AgentState.hpp  CMakeLists.txt  CameraCalibration.cpp  CameraCalibration.hpp  CommandLineParameters.cpp  CommandLineParameters.hpp  CommonPointerTypes.hpp  CommonTypes.hpp  CoordinatesConversion.cpp  CoordinatesConversion.hpp  DebugLogger.cpp  DebugLogger.hpp  ReadSettingsHelper.hpp  RunTimer.cpp  RunTimer.h  RunTimer.hpp  SetupType.hpp  Timer.hpp  TimestampedFrame.cpp  TimestampedFrame.hpp
source/common/settings/: CalibrationSettings.cpp  CalibrationSettings.hpp  CommandLineParameters.cpp  CommandLineParameters.hpp  CommandLineParser.cpp  CommandLineParser.hpp  ReadSettingsHelper.hpp  StreamDescriptor.cpp  StreamDescriptor.hpp
source/common/tests/: CMakeLists.txt  TestAgentState.cpp  TestAgentState.hpp
source/grabber/: CMakeLists.txt  GrabberData.cpp  GrabberData.hpp  GrabberHandler.cpp  GrabberHandler.hpp  GrabberPointerTypes.hpp  QueueingApplicationSink.cpp  QueueingApplicationSink.hpp  StreamReceiver.cpp  StreamReceiver.hpp
source/grabber/settings/: GrabberSettings.cpp  GrabberSettings.hpp
source/hub/: CMakeLists.txt  HubPointerTypes.hpp  Multiplicator.cpp  Multiplicator.hpp  QueueHub.cpp  QueueHub.hpp
source/inter-species/: CMakeLists.txt  GenericSubscriber.cpp  GenericSubscriber.hpp  InterSpeciesDataManager.cpp  InterSpeciesDataManager.hpp  Subscriber.cpp  Subscriber.hpp  zmqHelpers.hpp
source/inter-species/settings/: InterSpeciesSettings.cpp  InterSpeciesSettings.hpp
source/robot-control/: CMakeLists.txt  ConnectionStatusType.hpp  ControlLoop.cpp  ControlLoop.hpp  ControlModeStateMachine.cpp  ControlModeStateMachine.hpp  FishBot.cpp  FishBot.hpp  MotionPatternType.hpp  Navigation.cpp  Navigation.hpp  RobotControlPointerTypes.hpp  RobotsHandler.cpp  RobotsHandler.hpp  SetupMap.cpp  SetupMap.hpp  icons.qrc
source/robot-control/aesl/: Fish_bot_A.aesl  Fish_bot_B.aesl  Fish_bot_C.aesl  Fish_bot_D.aesl  Fish_bot_E.aesl  Fish_bot_F.aesl  Fish_bot_G.aesl  Fish_bot_H.aesl  Fish_bot_I.aesl  Fish_bot_J.aesl
source/robot-control/control-maps/: ControlArea.cpp  ControlArea.hpp  ControlMap.cpp  ControlMap.hpp
source/robot-control/control-modes/: ControlMode.cpp  ControlMode.hpp  ControlModeType.hpp  ControlTarget.hpp  FishModelWithWalls.cpp  FishModelWithWalls.hpp  FollowGroup.cpp  FollowGroup.hpp  GenericFishModel.cpp  GenericFishModel.hpp  GoStraight.cpp  GoStraight.hpp  GoToPosition.cpp  GoToPosition.hpp  Idle.cpp  Idle.hpp  Manual.cpp  Manual.hpp  ModelBased.cpp  ModelBased.hpp  ModelParameters.hpp  Trajectory.cpp  Trajectory.hpp  ZoneBasedFishModel.cpp  ZoneBasedFishModel.hpp
source/robot-control/experiment-controllers/: CircularSetupController.cpp  CircularSetupController.hpp  CircularSetupFollowerController.cpp  CircularSetupFollowerController.hpp  CircularSetupFollowerWithModelController.cpp  CircularSetupFollowerWithModelController.hpp  CircularSetupLeaderController.cpp  CircularSetupLeaderController.hpp  CircularSetupLeaderWithModelController.cpp  CircularSetupLeaderWithModelController.hpp  ControlArea.cpp  ControlArea.hpp  ControlMap.hpp  DominatingSetController.cpp  DominatingSetController.hpp  ExperimentController.cpp  ExperimentController.hpp  ExperimentControllerFactory.hpp  ExperimentControllerType.hpp  ExperimentManager.cpp  ExperimentManager.hpp  InitiationController.cpp  InitiationController.hpp  InitiationLeaderController.cpp  InitiationLeaderController.hpp  InitiationLureController.cpp  InitiationLureController.hpp  InterspeciesController.cpp  (+3 more)
source/settings-interface/: CMakeLists.txt  Receiver.cpp  Receiver.hpp  SettingsInterface.cpp  SettingsInterface.hpp
source/tracker/: CMakeLists.txt  TrackerPointerTypes.hpp  TrackingData.cpp  TrackingData.hpp  TrackingDataManager.cpp  TrackingDataManager.hpp  TrackingFactory.hpp  TrackingHandler.cpp  TrackingHandler.hpp  TrackingSetup.cpp  TrackingSetup.hpp  TrajectoryWriter.cpp  TrajectoryWriter.hpp  icons.qrc
source/video-grabber/: CMakeLists.txt  QueueingApplicationSink.cpp  QueueingApplicationSink.hpp  StreamReceiver.cpp  StreamReceiver.hpp  TimestampedFrame.cpp  TimestampedFrame.hpp  VideoGrabber.cpp  VideoGrabber.hpp  VideoGrabberSettings.cpp  VideoGrabberSettings.hpp
source/viewer/: CMakeLists.txt  FrameConvertor.cpp  FrameConvertor.hpp  ViewerData.cpp  ViewerData.hpp  ViewerHandler.cpp  ViewerHandler.hpp  ViewerPointerTypes.hpp  ViewerWidget.cpp  ViewerWidget.hpp  ViewerWidget.ui  icons.qrc
(+268 files in other folders)
