add_subdirectory(simple-video-grabber)
add_subdirectory(camera-viewer)
add_subdirectory(trajectory-convertor)
add_subdirectory(pixel-locator)
add_subdirectory(control-map-viewer)
add_subdirectory(simple-tracker)
add_subdirectory(simple-robot-controller)
add_subdirectory(path-planning-viewer)
add_subdirectory(inter-species-data-receiver)
add_subdirectory(inter-species-data-sender)
add_subdirectory(simple-settings-interface)
add_subdirectory(coordinates-convertor)

